--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "node-server-testing",
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest --watch"
   },
   "jest": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
+    "eslint": "^6.1.0",
     "jest": "^24.8.0",
     "supertest": "^4.0.2"
   },
